start writing unut tests with testfx